убрал коментарий для clear-both

--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -15,7 +15,7 @@ permalink: /высотное-обследование
 ### Для чего нужна высотное обследование.
 Основная цель высотного обследования получения ответов на интересующие вопросы Заказчика.   
 Сбор данных о техническом состоянии элементов, конструкций, узлов, агрегатов в труднодоступных местах.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 ### Что вам даст обследование.
 1. Достоверную информацию, на основании которой вы будете принимать решения.
