--- a/2.0_access.md
+++ b/2.0_access.md
@@ -21,7 +21,7 @@ permalink: /обеспечение-доступа
 Для предоставления доступа Вашему специалисту в труднодоступное место, мы разработаем и установим безопасный путь.   
 Возможна установка временного или постоянного, безопасного пути на вашем объекте.
 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 ### **Инженерное сооружение.**
 
 ***Труднодоступное инженерное проектирование - это наша специальность.***   
