--- a/2.1_.md
+++ b/2.1_.md
@@ -10,7 +10,7 @@ permalink: /высота
 
 #### Опасным производственным фактором работ на высоте является расположение рабочего места на высоте от земли, пола или другой поверхности и связанная с этим возможность падения работника с высоты или падения предметов на работника.
 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 ### **К работам на высоте относятся работы, при которых:**
 
 - а) существуют риски, связанные с возможным падением работника с высоты 1,8 м и более, в том числе:  
