--- a/2.2_.md
+++ b/2.2_.md
@@ -14,7 +14,7 @@ permalink: /замкнутое-пространство
 - Может стать причиной поглощения;  
 - Может иметь ограниченные средства для входа и выхода.
 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 ### **Примеры замкнутых пространств:** 
 Резервуары для хранения, автоцистерны, котлы, бункеры, трубопроводы и другие отсеки резервуарного типа;  
 Открытые: полости, ямы;  
