--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -16,11 +16,11 @@ permalink: /анкерная-линия-PEREPRAVA
 {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
 {% include el-pdf.html text="Заключение Минпромторга" name="7.3.1.1. Заключение Минпромторга.pdf" %}
 {% include el-contact-form.html icon="receiver" text="Заказать" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
+###### &nbsp;   
 
 ### **Преимущества системы**  
 {% include el-img.html name="sss/3.5.1.jpg"  %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
+###### &nbsp;   
 
 -	До 7-и одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="files\7.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
 -	Установка анкерной линии на любой высоте при факторе падения 0;  
@@ -32,17 +32,17 @@ permalink: /анкерная-линия-PEREPRAVA
 -	Оснащена дополнительной резервирующей петлей, гарантирующей безопасную эксплуатацию системы в случае некорректной установки цангового зажима.   
 -	Все компоненты линии изготовлены из нержавеющей стали.   
 -	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6). Подтверждено сертификатом № СДС.ТП.ДСП.020014-19.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 ### **Состав системы**
  
 #### **Мобильная анкерная точка, нерж. сталь** (FHL401)
 {% include el-img.html name="sss/3.FHL401.1.1.gif"  %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 Обеспечивает беспрепятственное прохождение промежуточных точек анкерной линии на любой высоте установки при факторе падения 0.  
 Совместима с любыми типами СИЗ втягивающего типа.    
 **Материал:** нержавеющая сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.FHL402.gif" align="left" noshadow="1" width="1/3" %}
 #### **Промежуточный структурный анкер, нерж. сталь** (FHL402)
@@ -50,48 +50,48 @@ permalink: /анкерная-линия-PEREPRAVA
 *  Дополнительная точка опоры.  
 *  Возможность установки на стенах зданий или под потолок.  
 **Материал:** нержавеющая сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.FHL403.gif" align="left" noshadow="1" width="1/3" %}
 #### **Концевой структурный анкер 1-точечный, нерж. сталь** (FHL403)
 Используется при установке линии на анкерные столбы.   
 **Материал:** нержавеющая сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
  
 {% include el-img.html name="sss/3.FHL404.gif" align="left" noshadow="1" width="1/3" %}
 #### **Концевой структурный анкер 2-точечный, нерж. сталь** (FHL404)
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
 **Материал:** нержавеющая сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
  
 {% include el-img.html name="sss/3.FHL405.gif" align="left" noshadow="1" width="1/3" %}
 #### **Амортизирующее устройство** (FHL405)
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии.  
 Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
 **Материал:** нержавеющая сталь
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
   
 {% include el-img.html name="sss/3.FHL406.gif" align="left" noshadow="1" width="1/3" %}
 #### **Натяжитель для троса** (FHL406)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
 **Материал:** нержавеющая сталь
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
  
 {% include el-img.html name="sss/3.FHL407.gif" align="left" noshadow="1" width="1/3" %}
 #### **Промежуточный структурный анкер угловой** (FHL407)
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
 **Материал:** нержавеющая сталь
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
    
 {% include el-img.html name="sss/3.ZG002.gif" align="left" noshadow="1" width="1/3" %}
 #### **Цанговый зажим** (ZG002)
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
  
 {% include el-img.html name="sss/3.SSR001.gif" align="left" noshadow="1" width="1/3" %}
 #### **Трос из нержавеющей стали** (SSR001)
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
  
 #### Упаковка анкерной линии
 Готовое решение предусматривает подробную инструкцию по сборке системы, комплект эксплуатационных документов и гарантийный талон на анкерную линию.
