--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -13,7 +13,7 @@ permalink: /электро-векторное-картирование
 
 ### Тестирование Мембраны Плоской Крыши
 {% include el-img.html name="evk/EVK.006.jpg" align="left" width="1/2" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
+###### &nbsp;   
 #### Испытания Плоских Кровельных Материалов
 
 *Детектор протечек Buckleys Wet Roof Pro’ может определить и обнаружить местонахождение утечки внутри плоской крыши.*
@@ -26,13 +26,13 @@ permalink: /электро-векторное-картирование
 
 ### Типичная однослойная плоская конструкция крыши
 {% include el-img.html name="evk/EVK.007.jpg" align="left" width="1/2" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 *Детектор протечек Buckleys Wet Roof Pro’: обнаруживает утечки во влажных условиях.*
 
 ### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**
 {% include el-img.html name="evk/EVK.001.jpg" align="left" width="1/2" %}
 Найдите протечки крыши в условиях влажной погоды
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 ### Мокрые Крыши Про
 **Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.
@@ -43,7 +43,7 @@ permalink: /электро-векторное-картирование
 
 Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.
 Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
 {% include el-img.html name="evk/EVK.003.jpg" align="left" width="1/2" %}
@@ -56,7 +56,7 @@ permalink: /электро-векторное-картирование
 * Тест на протечки круглый год
 * Способный испытывать любую толщину мембраны
 * Дискретная звуковая сигнализация
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 **Технические характеристики:**
 * Напряжение тока импульс выхода: DC 32V
 * Выходная мощность: <10 Вт
@@ -77,4 +77,4 @@ permalink: /электро-векторное-картирование
 {% include el-img.html name="evk/KDK.002.png" align="left" width="1/2" %}
 {% include el-img.html name="evk/KDK.003.png" align="left" width="1/2" %}
 {% include el-img.html name="evk/KDK.004.png" align="left" width="1/2" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
