--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -18,7 +18,7 @@ permalink: /инструменты
 {% include el-img.html name="Instrument/EVK.01.png" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/EVK.02.jpg" align="left" width="1/3" %}
 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **Мокрые Крыши Про**
 **Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
@@ -31,7 +31,7 @@ permalink: /инструменты
  
 {% include el-img.html name="Instrument/PST100.01.png" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/PST100.02.jpg" align="left" width="1/3" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 **Применение:**
 
@@ -42,7 +42,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/МТ2007.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/МТ2007.02.jpg" align="left" width="1/3" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 Магнитный толщиномер покрытий МТ-2007 предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
 
@@ -56,7 +56,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/Testo865.01.png" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/Testo865.02.png" align="left" width="1/3" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 Тепловизор testo 865 – профессиональный прибор, который ориентирован на решение самых важных задач для повседневной работы специалиста.  
 Область применение тепловизора Testo 865:  
@@ -71,7 +71,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/EasyBeton.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/EasyBeton.02.png" align="left" width="1/3" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 Измеритель прочности Beton Easy CONDTROL предназначен для неразрушающего контроля прочности и однородности бетона методом ударного импульса по ГОСТ 22690   
 
@@ -86,7 +86,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/vik.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/vik.02.jpg" align="left" width="1/3" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 Набор НТЦ Эксперт ВИК разработан для **профессионального контроля производственных объектов.** Значительно оптимизирован по функционалу и качеству измерительного инструмента. Набор комплектуется сертификатом о калибровке и флешкой, содержащей образцы техкарт, актов и журналов ВИК. 
 
