--- a/_portfolio/20151202.md
+++ b/_portfolio/20151202.md
@@ -15,7 +15,7 @@ title: Обследование временного кровельного по
 #### **Инженерно-техническое обследование временного кровельного покрытия здания.**
 #### **Причина обследования:** Обследование кровли проводится по причине возникновения протечек, зафиксированных внутри помещений во время дождей и таяния снега.
 #### **Цель обследования:** Качественная оценка технического состояния конструкции кровли и временного кровельного покрытия.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 ### **Техническое задание**  
 1.	Визуальное обследование временного кровельного покрытия здания, 870 м2.  
@@ -38,64 +38,64 @@ title: Обследование временного кровельного по
      
 **Комментарий:**   
 - Большое количество разбросанного строительного мусора, пиломатериалов, арматуры
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.2.png" align="left" width="1/2" %}
     
 **Комментарий:**   
 - Временное гидроизоляционное покрытие (тент) имеет многочисленные порезы, проколы, структурные разрушения по всей площади.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.3.png" align="left" width="1/2" %}
  
 **Комментарий:**   
 - Тестовое покрытие не прикреплено по периметру к основанию и в местах стыковок.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.4.png" align="left" width="1/2" %}
     
 **Комментарий:**   
 - Тентовое покрытие отсутствует на парапете торца здания.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.5.png" align="left" width="1/2" %}
  
 **Комментарий:**   
 - Гидроизоляционное покрытие уложено на стропильную систему, покрытую фанерой толщиной 6 мм.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.6.png" align="left" width="1/2" %}
  
 **Комментарий:**   
 - Стропильная система выполнена из бруса 40х150 мм. Выявлено частичное проседание стропил. 4 штуки требуют частичной замены или установки дополнительных опор.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.7.png" align="left" width="1/2" %}
  
 **Комментарий:**   
 - Перекрытие защищено гидроизоляционным слоем из битумного наплавляемого материала. 50% перекрытия утеплено минеральным утеплителем толщиной 50 мм.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.8.png" align="left" width="1/2" %}
  
 **Комментарий:**   
 - В парапетах смонтированы металлические трубы диаметром 40 мм для отвода воды.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.9.png" align="left" width="1/4" %}
 {% include el-img.html name="portfolio/20151202/20151202.91.png" align="left" width="1/4" %}
 {% include el-img.html name="portfolio/20151202/20151202.92.png" align="left" width="1/4" %}
      
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 **Комментарий:**   
 - При осмотре подкровельного пространства были выявлены многочисленные следы протечек.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="portfolio/20151202/20151202.93.png" align="left" width="1/4" %}
  
 **Комментарий:**   
 - Фановые трубы заглушены гидроизоляционным материалом, не имеют продуха для нормального функционирования.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **По результатам проведенного обследования:**   
 - было составлено техническое заключение     
