--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -18,7 +18,7 @@ permalink: /анкерная-линия-GORIZONT
 {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России
 {% include el-contact-form.html icon="receiver" text="Заказать" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 
 ### **Преимущества системы**  
@@ -29,7 +29,7 @@ permalink: /анкерная-линия-GORIZONT
 *	Возможен монтаж с любым шагом установки промежуточных анкеров (до 12 м). Доступны также готовые «пакетные решения»: 12, 24, 36, 48, 60, 72 и 84 метров линии;  
 *	Возможность самостоятельного монтажа на фермы, балки, опоры, кровли методом охвата или с помощью анкеров.   
 *	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6).
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
+###### &nbsp;   
 
  
 ### **Состав системы**
@@ -37,7 +37,7 @@ permalink: /анкерная-линия-GORIZONT
 #### **Мобильная анкерная точка, гальв. сталь** (FHL101)
 Обеспечивает беспрепятственное прохождение промежуточных анкерных точек анкерной линии без необходимости отсоединения троса.   
 **Материал:** гальв. сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.FHL102.gif" align="left" noshadow="1" width="1/3" %}
 #### **Промежуточный структурный анкер, нерж. сталь** (FHL102)  
@@ -45,48 +45,48 @@ permalink: /анкерная-линия-GORIZONT
 *  Дополнительная точка опоры.  
 *  Возможность установки на стенах зданий, крышах и кровлях.  
 **Материал:** нержавеющая сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
   
 {% include el-img.html name="sss/3.FHL103.gif" align="left" noshadow="1" width="1/3" %}  
 #### **Концевой структурный анкер 1-точечный, нерж. сталь** (FHL103)
 Используется при установке линии на анкерные столбы.   
 **Материал:** нержавеющая сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.FHL104.gif" align="left" noshadow="1" width="1/3" %}
 #### **Концевой структурный анкер 2-точечный, нерж. сталь** (FHL104)
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
 **Материал:** нержавеющая сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.FHL105.gif" align="left" noshadow="1" width="1/3" %}
 #### **Амортизирующее устройство** (FHL105)
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии.  
 Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
 **Материал:** нержавеющая сталь
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.FHL106.gif" align="left" noshadow="1" width="1/3" %}
 #### **Натяжитель для троса** (FHL106)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
 **Материал:** нержавеющая сталь
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.FHL107.gif" align="left" noshadow="1" width="1/3" %}
 #### **Промежуточный структурный анкер угловой** (FHL107)
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
 **Материал:** нержавеющая сталь
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.ZG002.gif" align="left" noshadow="1" width="1/3" %}
 #### **Цанговый зажим** (ZG002)
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.SSR001.gif" align="left" noshadow="1" width="1/3" %}
 #### **Трос из нержавеющей стали** (SSR001) 
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 ### Упаковка анкерной линии  
 Готовое решение предусматривает подробную инструкцию по сборке системы, комплект эксплуатационных документов и гарантийный талон на анкерную линию.
