--- a/3.4_VERTIKAL.md
+++ b/3.4_VERTIKAL.md
@@ -11,7 +11,7 @@ permalink: /анкерная-линия-VERTIKAL
 ### Наша компания является дилерами компании **HIGH SAFETY**
 {% include el-img.html name="toplogo/3.4.0.jpg" align="left" width="1/2" %}
 {% include el-contact-form.html icon="receiver" text="Заказать" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 Вертикальная жесткая анкерная линия **VERTIKAL** обеспечивает непревзойденный уровень безопасности при подъеме/спуске по любым типам стационарных лестниц.
 Анкерная линия может быть установлена как в помещении, так и на открытом воздухе, в том числе в суровых климатических или эксплуатационных условиях (районы Крайнего Севера, крыши домов, морские буровые платформы, нефтяные вышки).
@@ -41,17 +41,17 @@ permalink: /анкерная-линия-VERTIKAL
 Автоматически блокируется на анкерной линии при падении.  
 В комплект входит 2 захвата.    
 **Материал:** нержавеющая сталь.  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.RVL102.0.jpg"  %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 {% include el-img.html name="sss/3.RVL102.gif" align="left" noshadow="1" width="1/3" %}
 #### **Верхний структурный анкер с амортизирующим устройством** (арт. RVL102)
 Амортизатор закрытого типа оснащеный индикатором падения/натяжения встроен в верхний структурный анкер.   
 Цветовая маркировка на оси амортизатора облегчает визуальный контроль натяжения троса анкерной линии, а также помогает с легкостью идентифицировать факт останова падения.   
 Одновременный подъем до 2 (двух) пользователей.    
 **Материал:** нержавеющая сталь.    
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
  
 {% include el-img.html name="sss/3.RVL103.gif" align="left" noshadow="1" width="1/3" %} 
 #### **Верхний структурный анкер с элементом крепления** (арт. RVL103)
@@ -59,34 +59,34 @@ permalink: /анкерная-линия-VERTIKAL
 Защита креплений - антивандальное исполнение.    
 Возможность монтажа на существующие лестницы, мачты, вышки, башни, опоры любого типа.    
 **Материал:** нержавеющая сталь. 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.RVL104.gif" align="left" noshadow="1" width="1/3" %}
 #### **Верхняя удлиняющая планка** (арт. RVL104)
 Обеспечивает страховку пользователя  при выходе на рабочую площадку.    
 **Длина:** 1 300 мм.  
 **Материал:** нержавеющая сталь. 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.RVL105.gif" align="left" noshadow="1" width="1/3" %}
 #### **Нижний структурный анкер с элементом крепления и элементом натяжения** (арт. RVL105)
 Защита креплений - антивандальное исполнение.    
 Индикатор натяжения исключает возможность ошибки при монтаже.    
 **Материал:** нержавеющая сталь. 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.RVL106.gif" align="left" noshadow="1" width="1/3" %}
 #### **Держатель троса** (арт. RVL106)
 Устанавливается на протяжении всей длины анкерной линии через каждые 7 метров.   
 Легко монтируется к конструкции существующей лестницы обжимным методом.     
 **Материал:** нержавеющая сталь.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 {% include el-img.html name="sss/3.SSR001.gif" align="left" noshadow="1" width="1/3" %}
 #### **Трос диаметром 8 мм** (арт. SSR001)
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность системы.   
 Натяжение троса происходит с помощью специального ключа, который входит в комплект поставки.  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
  
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
 
