--- a/_portfolio/20160817.md
+++ b/_portfolio/20160817.md
@@ -14,7 +14,7 @@ title: Обследование межпанельных швов
 
 #### **Причины обследования: Разрушение старого герметика, определение объёма работ по герметизации**
 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 ### **Техническое задание**  
 1.	Обследование межпанельные швы на фасаде здания.  
 2.	Составление отчета об обследовании с указанием объема и мест ремонта (герметизации) межпанельных (межплиточных) швов.
@@ -29,14 +29,14 @@ title: Обследование межпанельных швов
 #### **По результатам обследования здания, на предмет выявления мест повреждения (разрушения) герметичного соединения межпанельных (межплиточных) швов, была составлена дефектная ведомость.**
 {% include el-img.html name="portfolio/20160817/20160817.1.png" align="left" width="1/3" %}
 {% include el-img.html name="portfolio/20160817/20160817.2.png" align="left" width="1/3" %}
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 {% include el-img.html name="portfolio/20160817/20160817.3.png" align="left" width="1/3" %}
 {% include el-img.html name="portfolio/20160817/20160817.4.png" align="left" width="1/3" %}
 
    
 
     
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 #### **Так должны выглядеть отремонтированные швы:**
 {% include el-img.html name="portfolio/20160817/20160817.5.png" align="left" width="1/3" %}
 {% include el-img.html name="portfolio/20160817/20160817.6.png" align="left" width="1/3" %}
@@ -44,7 +44,7 @@ title: Обследование межпанельных швов
 
     
  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 
 
