--- a/_portfolio/20191024.md
+++ b/_portfolio/20191024.md
@@ -13,7 +13,7 @@ title: Обследование мягкой кровли таунхаус
 Шифр проекта: 20191024**	
 
 #### **Причины обследования: протечки внутри дома во время ливневых дождей**
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 ### **Техническое задание**
 1.	Обследование мягкую кровлю на предмет выявления нарушений герметичности кровельного покрытия и конструктивных элементов расположеных на кровле.
@@ -31,7 +31,7 @@ title: Обследование мягкой кровли таунхаус
 #### 1.	Повреждение конькового элемента.
 
   
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### 2.	Отсутствует герметичных примыканий соединения кровельного покрытия к внешним выходам вентиляционных труб.  
 
@@ -42,7 +42,7 @@ title: Обследование мягкой кровли таунхаус
 {% include el-img.html name="portfolio/20191024/20191024.6.png" align="left" width="1/3" %}
 {% include el-img.html name="portfolio/20191024/20191024.7.png" align="left" width="1/3" %}
 
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### 3.	Не выполненная герметизация металлического отлива к облицовке фасада.
 
@@ -51,7 +51,7 @@ title: Обследование мягкой кровли таунхаус
 {% include el-img.html name="portfolio/20191024/20191024.10.png" align="left" width="1/3" %}
 {% include el-img.html name="portfolio/20191024/20191024.11.png" align="left" width="1/3" %}
    
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### 4.	При обследовании чердачного помещения было обнаружено, что диффузионная мембрана частично срезана и вентиляционный продух герметично закрыт. Из-за этого отвод пара и конденсата не происходит. 
 
@@ -59,7 +59,7 @@ title: Обследование мягкой кровли таунхаус
 {% include el-img.html name="portfolio/20191024/20191024.13.png" align="left" width="1/3" %}
 {% include el-img.html name="portfolio/20191024/20191024.14.png" align="left" width="1/3" %}
   
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **По результатам проведенного обследования:** 
 - был составлен отчет о причинах нарушений герметичности кровельного покрытия и конструктивных элементов.
