--- a/_portfolio/20200123.md
+++ b/_portfolio/20200123.md
@@ -16,7 +16,7 @@ title: Обследование кровельного покрытия
 #### **Инженерно-техническое обследование кровельного покрытия здания.**
 #### **Причина обследования:** Обследование кровли проводится по причине возникновения протечек, зафиксированных внутри помещений во время дождей и таяния снега по периметру кровельного свеса.  
 **Цель обследования:** Качественная оценка технического состояния конструкции кровли и кровельного покрытия; поиск дефектов гидроизоляционного слоя.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 
 ### **Техническое задание.**
@@ -41,14 +41,14 @@ title: Обследование кровельного покрытия
 {% include el-img.html name="portfolio/20200123/20200123.2.jpg" align="left" width="1/2" %}
 
  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **Размеры и уклоны крыши:**
 
 {% include el-img.html name="portfolio/20200123/20200123.3.jpg" align="left" width="1/2" %}
 
  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **1. Уклоны кровельных скатов** 
 {% include el-img.html name="portfolio/20200123/20200123.4.jpg" align="left" width="1/2" %}
@@ -56,7 +56,7 @@ title: Обследование кровельного покрытия
  
 **Комментарий:**   
 СП 17.13330.2017 Кровли, табл. 4.1 - ***Частично не соответствует***
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **2. Водоотвод**
 {% include el-img.html name="portfolio/20200123/20200123.5.png" align="left" width="1/2" %}
@@ -65,7 +65,7 @@ title: Обследование кровельного покрытия
 **Комментарий:**   
 СП 17.13330.2017 - ***Не соответствует***  
 Водоотвод осуществляется в наружный водосборный желоб, водоотведение через водосточные трубы Д140 мм. Частично отсутствуют водосборный желоб и водосточные трубы.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **3. Вентиляция кровли**
 {% include el-img.html name="portfolio/20200123/20200123.6.png" align="left" width="1/2" %}
@@ -74,7 +74,7 @@ title: Обследование кровельного покрытия
 **Комментарий:**   
 СП 17.13330.2017 п. 4.5 - ***Не соответствует***  
 Отсутствует вентиляция подкровельного пространства: отсутствие вент. каналов на карнизных участках, на коньке кровли, что препятствует выведению конденсата и приводит к его избыточному накоплению в подкровельном пространстве.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **4. Отсутствие герметичных примыканий кровли к вертикальным поверхностям**
 СП 17.13330.2017 п. 7.2. - ***Не соответствует***  
@@ -85,33 +85,33 @@ title: Обследование кровельного покрытия
  
 СП 17.13330.2017 - ***Не соответствует***
 Целостность кровельного покрытия нарушена вследствие пробития гвоздями для закрепления ремонтных материалов.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 #### **6. Защитное ограждение на кровле**
 {% include el-img.html name="portfolio/20200123/20200123.8.png" align="left" width="1/2" %}
 
 СП 56.13330.2011 п. 5.3.3 - ***Отсутствует***  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 #### **7. Элементы для крепления страховочного троса**
 {% include el-img.html name="portfolio/20200123/20200123.9.png" align="left" width="1/2" %}
  
 СП 17.13330.2017 п. 4.8 – **Соответствует**  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 #### **8. Шаг стропильных ног 1300-1500 мм.**
 {% include el-img.html name="portfolio/20200123/20200123.91.png" align="left" width="1/2" %}
  
 СП 17.13330.2017 - **Соответствует**  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 #### **9. Шаг обрешетки 300 – 400 мм, доска обрешетки необрезная 25 мм.**
 {% include el-img.html name="portfolio/20200123/20200123.92.png" align="left" width="1/2" %}
  
 СП 17.13330.2017 - **Соответствует**  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 #### **10. Карнизный свес**
 {% include el-img.html name="portfolio/20200123/20200123.93.png" align="left" width="1/2" %}
  
 СП 17.13330.2017 3.1.11 - ***Не соответствует***  
 Конструкция карнизного свеса не защищает стены от дождевой или талой воды.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **По результатам проведенного обследования:**
 - было составлено техническое заключение.   
