--- a/_v2/1.1_facades.md
+++ b/_v2/1.1_facades.md
@@ -14,7 +14,7 @@ submenu: true
 ### __Вид обследования:__  
 1. Первоначальное обследование фасада, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению. 
 2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ.  
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 ***Детальное, визуально-инструментальное обследование фасада здания. (точное определения конкретных дефектов: растрескивание, сколы, отслоение, обнаружить причины протечки).***  
  
@@ -42,7 +42,7 @@ submenu: true
 4. Контроль выполненных работ. 
 5. Сверку проектной (исполнительной) документации с выполненными работами.
 6. Полученная информация поможет сэкономить ваш бюджет.
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 
 #### **Какие документы получаем по окончанию обследования.**  
 {% include el-img.html name="0/1.2.9.jpg" align="left" width="1/3" %}  
@@ -53,7 +53,7 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 * К заключению прилагаются рекомендации по устранению выявленных дефектов.  
 * На бумажном носителе в 2-х (двух) экземплярах.  
 * В электронном виде (сканировании копия в формате PDF).
-###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
+###### &nbsp;  
 **техническое заключение формируется на основании технического задания.**
 
 ___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
