--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -5,7 +5,7 @@ main: true
 sortid: 1.0
 submenu: true
 layout: category
-permalink: /высотное-обследование
+slug: /высотное-обследование
 ---
 
 #### __Высотное обследование__ – форма контроля, получение необходимой информации на высоте и в труднодоступных местах. 
