--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -3,7 +3,7 @@ title: Фасады
 cat: 1
 sortid: 1.1
 submenu: true
-slug: фасады
+permalink: /фасады
 ---
 
 ### __Комплекс по обследованию фасада производится в следующих случаях:__  
