--- a/1.3_facades.md
+++ b/1.3_facades.md
@@ -1,9 +1,9 @@
 ---
-title: Фасады
+title: Диагностика фасадов
 cat: 1
 sortid: 1.1
 submenu: true
-permalink: /фасады
+permalink: /диагностика-фасадов
 ---
 
 ### __Комплекс по обследованию фасада производится в следующих случаях:__  
