--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -1,9 +1,9 @@
 ---
-title: Неразрушающая лаборатория
+title: Инструментарий
 cat: 1
 sortid: 1.5
 submenu: true
-permalink: /неразрушающая-лаборатория
+permalink: /инструментарий
 ---
 
 ### **1. Визуальный неразрушающий контроль.**
