--- a/1.4_Tech_conclus.md
+++ b/1.4_Tech_conclus.md
@@ -6,7 +6,7 @@ submenu: false
 permalink: /техническое-заключение
 ---
 
-**Заключения, представляет собой комплекс работ по выявлению критических замечаний, достоверности указанной информации, представленных в исследовательской части, а также написания заключения и проверки полноты его содержания согласно требованиям.
+**Заключения, представляет собой комплекс работ по выявлению критических замечаний, достоверности указанной информации, представленных в исследовательской части, а также написания заключения и проверки полноты его содержания согласно требованиям.**
 
 
 _По результатам обследования составляется отчет о техническом состоянии._  
