--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -38,4 +38,4 @@ __Комплекс по обследованию объектов произво
 
 По результатам проведенных комплексных изыскания Вы получаете __[техническое заключение]({% link 1.4_Tech_conclus.md %})__ с подробным описание обнаруженных дефектов.
 
-___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
+___В нашей деятельности мы используем только профессиональное оборудование и __[инструменты]({% link 7.2_Instrument.md %})__, имеющие поверки и необходимые сертификаты качества.___
