--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -9,10 +9,10 @@ permalink: /инструменты
 
 #### **В своей работе мы используем профессиональный инструмент, который прошел поверку и имеет лицензию**
 {: .uk-text-center}
-### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**
+### **[Электро-искровое дефектоскоп]({% link 7.1.2.3_Buckleys.md %})**
 {: .uk-text-center}
 
-Найдите протечки крыши в условиях влажной погоды
+Дефектоскоп позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
 {: .uk-text-center}
 
 {% include el-img.html name="Instrument/EVK.01.png" align="left" width="1/3" %}
