--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -22,7 +22,8 @@ permalink: /инструменты
 
 **Электро-искровой Дефектоскоп** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
 **Электро-искровой Дефектоскоп** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить места протечек.
-{% include el-img.html name="Instrument/EVK.jpg" align="left" width="1" %}
+
+{% include el-img.html name="img/evk/EVK.jpg" align="left" width="1" %}
 
 
 ### **Искровой тестер**
