--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -17,7 +17,7 @@ permalink: /инструменты
 
 {% include el-img.html name="Instrument/EVK.01.png" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/EVK.02.jpg" align="left" width="1/3" %}
-
+{% include el-img.html name="img/evk/EVK.jpg"  %}
 ###### &nbsp;  
 
 **Электро-искровой Дефектоскоп** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
