--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -85,12 +85,12 @@ permalink: /инструменты
 - Уникальная элементная база, позволяющая работать зимой при температурах до -25°С 
 - Наличие коэффициента совпадения Кс для оперативного уточнения базовых градуировочных характеристик в соответствии с Приложением № 9 ГОСТ 22690
    
-### **Набор НТЦ Эксперт ВИК Поверенный**
+### **Набор Эксперт ВИК Поверенный**
 {: .uk-text-center}
 {% include el-img.html name="Instrument/vik.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/vik.02.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/vik.jpg" %}
 ###### &nbsp;  
 
-Набор НТЦ Эксперт ВИК разработан для **профессионального контроля производственных объектов.** Значительно оптимизирован по функционалу и качеству измерительного инструмента. Набор комплектуется сертификатом о калибровке и флешкой, содержащей образцы техкарт, актов и журналов ВИК. 
+Набор Эксперт ВИК разработан для **профессионального контроля производственных объектов.** Значительно оптимизирован по функционалу и качеству измерительного инструмента. Набор комплектуется сертификатом о калибровке и флешкой, содержащей образцы техкарт, актов и журналов ВИК. 
 
