--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -42,7 +42,7 @@ permalink: /инструменты
 {: .uk-text-center}
 {% include el-img.html name="Instrument/МТ2007.01.jpg" align="left" width="1/3" %}
 {% include el-img.html name="Instrument/МТ2007.02.jpg" align="left" width="1/3" %}
-{% include el-img.html name="Instrument/МТ.jpg" %}
+{% include el-img.html name="Instrument/MT.jpg" %}
 ###### &nbsp;  
 
 Магнитный толщиномер покрытий предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
