--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -15,7 +15,7 @@ permalink: /инструменты
 Дефектоскоп позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
 {: .uk-text-center}
 
-{% include el-img.html name="Instrument/EVK.jpg" %}
+{% include el-img.html name="evk/EVK.jpg" %}
 ###### &nbsp;  
 
 **Электро-искровой Дефектоскоп** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
