--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -4,7 +4,7 @@ cat: 7
 main: false
 submenu: false
 layout: buffer
-permalink: /детектор-протечек-Buckleys-Wet-Roof-Pro
+permalink: /Электро-искровой дефектоскоп
 ---
 
 {% include el-img.html name="evk/EVK.001.jpg" align="left" width="1/2" %}
