--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -4,14 +4,14 @@ cat: 7
 main: false
 submenu: false
 layout: buffer
-permalink: /Электро-искровой дефектоскоп
+permalink: /Детектор протечек Buckleys Wet Roof Pro
 ---
 
 {% include el-img.html name="evk/EVK.001.jpg" align="left" width="1/2" %}
 
-## Мокрые Крыши Про
-**Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
-**Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
+## Диагностика крыш
+**Электро-искровой дефектоскоп** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
+**Электро-искровой дефектоскоп** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
 {% include el-img.html name="evk/EVK.002.jpg" align="left" width="1/2" %}
 ###### &nbsp;  
