--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -10,7 +10,9 @@ permalink: /Детектор протечек Buckleys Wet Roof Pro’
 
 ## Диагностика крыш
 **Электро-искровой дефектоскоп** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
-**Электро-искровой дефектоскоп** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
+**Электро-искровой дефектоскоп** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.  
+
+{% include el-img.html name="Instrument/EVK.2.jpg" %}
 {% include el-img.html name="evk/EVK.001.jpg" align="left" width="1/2" %}
 
 {% include el-img.html name="evk/EVK.002.jpg" align="left" width="1/2" %}
