--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -21,7 +21,7 @@ permalink: /Детектор протечек Buckleys Wet Roof Pro’
 
 ` ` **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
-{% include el-img.html name="evk/EVK.003.jpg" align="left" width="1/2" %}
+{% include el-img.html name="evk/EVK.003.jpg" align="left" width="1/3" %}
 
 **Особенности**
 * Тест до 400 м2 в день  
@@ -33,7 +33,7 @@ permalink: /Детектор протечек Buckleys Wet Roof Pro’
 * Дискретная звуковая сигнализация  
 
 ###### &nbsp; 
-{% include el-img.html name="evk/EVK.004.jpg" align="left" width="1/2" %}
+{% include el-img.html name="evk/EVK.004.jpg" align="left" width="1/3" %}
 **Технические характеристики**  
 * Напряжение тока импульс выхода: DC 32V  
 * Выходная мощность: <10 Вт  
@@ -41,8 +41,7 @@ permalink: /Детектор протечек Buckleys Wet Roof Pro’
 * Рабочая высота: до 2000 м  
 * Диапазон температур от +4°C до +40°C  
 
-
-{% include el-img.html name="evk/EVK.004.jpg" align="left" width="1/3" %}  
-{% include el-img.html name="evk/EVK.009.png" align="left" width="1/3" %}  
+###### &nbsp;
+**Наши специалисты готовы выехать к Вам для поиска дефектов кровельного полотна.**  
 {% include el-img.html name="evk/EVK.005.jpg" align="left" width="1/3" %}
 ###### &nbsp;  
