--- a/1.4_Tech_conclus.md
+++ b/1.4_Tech_conclus.md
@@ -47,7 +47,7 @@ __1)	Визуальное обследование:__
 - состояние пассивной и активной молниезащиты
 - наличие трещин в металлоконструкциях
  
-*(цель: качественная оценка состояния объекта обследования, поиск дефектов, повреждений, нарушений).
+___*(цель: качественная оценка состояния объекта обследования, поиск дефектов, повреждений, нарушений).___  
  
 __2)	Инструментальное обследование:__  
 -  кровельного покрытия, метод неразрушающего контроля «Электро-искровое дефектоскопирование» с нанесением отметок дефектов на кровельном покрытие 
@@ -55,7 +55,7 @@ __2)	Инструментальное обследование:__
 - тепловизионное обследование
 - склерометрический метод измерения
 
-*(цель: оценка целостности и прочностные показатели объекта обследования).
+___*(цель: оценка целостности и прочностные показатели объекта обследования).___
 
 __3)	Составления технического заключения.__  
 
