--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -14,9 +14,11 @@ permalink: /диагностика-кровли
 ### **1. Нахождение мест протечек мембранной кровли.**  
 {% include el-img.html name="0/1.2.1.jpg"  %}   
 
-Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-векторное картирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
+Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-искровое дефектоскопирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
  Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
- На сегодняшний день __ЭВК - единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
+ На сегодняшний день __Электро-искровое дефектоскопирование единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
+ 
+___*Альтернативное название этого метода - метод ЭВК Электро-векторное картирование___  
 
 #### [Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев]({% link 7.1.2.0_evk.md %})
  а) Система эксплуатируемой крыши с зелеными насаждениями.  
@@ -24,7 +26,7 @@ permalink: /диагностика-кровли
  в) Система неэксплуатируемой инверсионной крыши.  
  г) Система неэксплуатируемой балластной крыши.  
   
-* **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**  
+* **Детектор протечек [Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})**  
 * **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**  
 
 {% include el-img.html name="evk/KDK.001.png" align="left" width="1/2" %}
