--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -26,7 +26,7 @@ ___*Альтернативное название этого метода - ме
  в) Система неэксплуатируемой инверсионной крыши.  
  г) Система неэксплуатируемой балластной крыши.  
   
-* **Детектор протечек [Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})**  
+* **[Электро-искровой дефектоскоп]({% link 7.1.2.3_Buckleys.md %})**  
 * **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**  
 
 {% include el-img.html name="evk/KDK.001.png" align="left" width="1/2" %}
