--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -11,7 +11,7 @@ permalink: /диагностика-кровли
 #### Исследования, проведенные нашими специалистами, позволят выявить дефекты кровли, причины протечек, фактическое состояние конструкций кровли, определить необходимый объем ремонтных работ, испытания материалов кровли (изоляции, утеплителя, несущих конструкций), и многое другое.
 
 ###### &nbsp;  
-### **1. Нахождение мест протечек мембранной кровли.**  
+### **1. [Нахождение мест протечек мембранной кровли.]({% link 7.1.2.0_evk.md %})**  
 {% include el-img.html name="0/1.2.1.jpg"  %}   
 
 Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-искровое дефектоскопирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
