--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -14,6 +14,29 @@ permalink: /диагностика-кровли
 ### **1. [Нахождение мест протечек мембранной кровли.]({% link 7.1.2.0_evk.md %})**  
 {% include el-img.html name="0/1.2.1.jpg"  %}   
 
+__Виды обследования:__
+
+1)	Визуальное обследование кровельного покрытия здания. 
+*(цель: качественная оценка состояния кровельного покрытия, поиск дефектов, повреждений, нарушений).
+Цена: 1м2 =  
+
+2)	Инструментальное обследование кровельного покрытия, метод неразрушающего контроля «Электро-искровое дефектоскопирование» с нанесением отметок дефектов на кровельном покрытие. 
+*(цель: оценка целостности кровельного покрытия, качества сварки кровельных картин и узловых соединений).
+Цена: 1м2 =  
+
+__Дополнительные услуги:__  
+
+3)	Гидроиспытания кровли.   
+*(цель: локализовать места протечек, выявить точную причину протечки)
+*Цена: уточнить у менеджера.
+
+4)	Вскрытие кровли.   
+*(цель: оценка состояния теплоизоляции, качества сворного шва, толщину теплоизоляции, количество крепежных элементов)
+*Цена: уточнить у менеджера.
+
+
+
+
 Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-искровое дефектоскопирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
  Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
  На сегодняшний день __Электро-искровое дефектоскопирование единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
