--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -14,24 +14,25 @@ permalink: /диагностика-кровли
 ### **1. [Нахождение мест протечек мембранной кровли.]({% link 7.1.2.0_evk.md %})**  
 {% include el-img.html name="0/1.2.1.jpg"  %}   
 
-__Виды обследования:__
+##### __Виды обследования:__
 
-1)	Визуальное обследование кровельного покрытия здания. 
-*(цель: качественная оценка состояния кровельного покрытия, поиск дефектов, повреждений, нарушений).
+__1)	Визуальное обследование кровельного покрытия здания__   
+****(цель: качественная оценка состояния кровельного покрытия, поиск дефектов, повреждений, нарушений).***  
 Цена: 1м2 =  
 
-2)	Инструментальное обследование кровельного покрытия, метод неразрушающего контроля «Электро-искровое дефектоскопирование» с нанесением отметок дефектов на кровельном покрытие. 
-*(цель: оценка целостности кровельного покрытия, качества сварки кровельных картин и узловых соединений).
+__2)	Инструментальное обследование кровельного покрытия__   
+*метод неразрушающего контроля «Электро-искровое дефектоскопирование» с нанесением отметок дефектов на кровельном покрытие.   
+****(цель: оценка целостности кровельного покрытия, качества сварки кровельных картин и узловых соединений).***  
 Цена: 1м2 =  
 
 __Дополнительные услуги:__  
 
-3)	Гидроиспытания кровли.   
-*(цель: локализовать места протечек, выявить точную причину протечки)  
+__3)	Гидроиспытания кровли__     
+___*(цель: локализовать места протечек, выявить точную причину протечки)___  
 *Цена: уточнить у менеджера.
 
-4)	Вскрытие кровли.   
-*(цель: оценка состояния теплоизоляции, качества сворного шва, толщину теплоизоляции, количество крепежных элементов)  
+__4)	Вскрытие кровли__     
+___*(цель: оценка состояния теплоизоляции, качества сворного шва, толщину теплоизоляции, количество крепежных элементов)___    
 *Цена: уточнить у менеджера.
 
 
