--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -17,12 +17,12 @@ permalink: /диагностика-кровли
 ##### __Виды обследования:__
 
 __1)	Визуальное обследование кровельного покрытия здания__   
-****(цель: качественная оценка состояния кровельного покрытия, поиск дефектов, повреждений, нарушений).***  
+___*(цель: качественная оценка состояния кровельного покрытия, поиск дефектов, повреждений, нарушений).___  
 Цена: 1м2 =  
 
 __2)	Инструментальное обследование кровельного покрытия__   
-*метод неразрушающего контроля «Электро-искровое дефектоскопирование» с нанесением отметок дефектов на кровельном покрытие.   
-****(цель: оценка целостности кровельного покрытия, качества сварки кровельных картин и узловых соединений).***  
+*метод неразрушающего контроля __[Электро-искровое дефектоскопирование]({% link 7.1.2.0_evk.md %})__ с нанесением отметок дефектов на кровельном покрытие.   
+___*(цель: оценка целостности кровельного покрытия, качества сварки кровельных картин и узловых соединений).___  
 Цена: 1м2 =  
 
 __Дополнительные услуги:__  
