--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -14,7 +14,7 @@ permalink: /электро-векторное-картирование
  
 ___*Альтернативное название этого метода - метод ЭВК Электро-векторное картирование___  
 
-#### [Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев]({% link 7.1.2.0_evk.md %})
+#### Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев
  а) Система эксплуатируемой крыши с зелеными насаждениями.  
  б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.  
  в) Система неэксплуатируемой инверсионной крыши.  
