--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -120,7 +120,7 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 * В которые входят данные осмотра, фото и видео материалы.  
 * В заключении будут отображены выявленные дефекты.   
 * К заключению прилагаются рекомендации по устранению выявленных дефектов.  
-* На бумажном носителе в 2-х (двух) экземплярах.  
+* На бумажном носителе.  
 * В электронном виде (сканировании копия в формате PDF).  
 ###### &nbsp;  
 
