--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -52,7 +52,7 @@ ___*(цель: качественная оценка состояния кров
 __2)	Инструментальное обследование кровельного покрытия, которое выполняется после и на основании визуального осмотра__     
 Цена: 1м2 =  
 
-__Дополнительные услуги:__  
+##### __Дополнительные услуги:__  
 
 __3)	Гидроиспытания кровли__     
 ___*(цель: локализовать места протечек, выявить точную причину протечки)___  
@@ -125,6 +125,22 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 ###### &nbsp;  
 
 **техническое заключение формируется на основании технического задания.**
+
+##### Пример: Технического задания  
+1)	Визуальное обследование кровельного покрытия здания   
+2)	Инструментальное обследование   
+*уточнить метод и инструмент которым проводится обследования  
+3)	Составления технического заключения  
+4)	Составления карты дефектов на плане кровли   
+*(необходимо иметь план кровли, чертеж, проектную документацию)  
+5)	Составления дефектной ведомости  
+
+Дополнительные услуги:  
+6)	Гидроиспытания кровли   
+7)	Вскрытие кровли   
+
+___*Цена может меняться в зависимости от технического задания, объёма работ, сроков, сложности кровли___   
+
 
 ___В нашей деятельности мы используем только профессиональное оборудование и [инструменты]({% link 7.2_Instrument.md %}), имеющие поверки и необходимые сертификаты качества.___
 
