--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -1,5 +1,5 @@
 ﻿---
-title: Электро-векторное картирование1
+title: Электро-искровое дефектоскопирование
 cat: 7
 main: false
 submenu: false
@@ -8,7 +8,7 @@ permalink: /электро-векторное-картирование
 ---
 {% include el-img.html name="0/1.2.1.jpg"  %} 
 
-Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-искровое дефектоскопирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
+Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __Электро-искровое дефектоскопирование__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
  Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
  На сегодняшний день __Электро-искровое дефектоскопирование единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
  
@@ -26,9 +26,7 @@ ___*Альтернативное название этого метода - ме
 {% include el-img.html name="evk/KDK.001.png" align="left" width="1/2" %}
 
 
-Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
 
-Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия. На сегодняшний день ЭВК - единственный способность находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
 
 ### Тестирование Мембраны Плоской Крыши
 {% include el-img.html name="evk/EVK.006.jpg" align="left" width="1/2" %}
